# olympiad-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.py  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ac5e70cab29c_group_olympiads_add_profiles_table.py  b7c8d9e0f1a2_consolidate_current_schema.py  d4e5f6a7b8c9_add_indexes.py  f3ddf3a4f48e_initial_schema.py
bot/: config.py  main.py  notifier.py
data/: olympiads.json
database/: db.py  models.py
scripts/: backup.sh  migrate_sqlite_to_pg.py
static/: index.html
tests/: conftest.py  test_auth.py  test_health.py  test_notifier.py  test_olympiads.py  test_user_olympiads.py
web/: main.py
