[project]
name = "olympiad-bot"
version = "1.1.0"
description = "Telegram bot + Mini App for tracking olympiad registrations"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "sentry-sdk>=2.0.0",
    "slowapi>=0.1.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
